--- a/wp-content/themes/atlanticmontessori/less/style.less
+++ b/wp-content/themes/atlanticmontessori/less/style.less
@@ -277,6 +277,7 @@ padding-bottom: 0;
 .hero {
 position: relative;
 height: 350px;
+margin-top: 1.5em;
 
 	img {
 	position: relative;
@@ -441,4 +442,6 @@ text-align: right;
 
 @import "grid.less";
 
-@import "mediaqueries.less";
+@import "retina.less";
+
+@import "respond.less";
