--- a/wp-content/themes/atlanticmontessori/less/tffaq.less
+++ b/wp-content/themes/atlanticmontessori/less/tffaq.less
@@ -1,6 +1,6 @@
 .tffaq-category {
 border: none;
-margin: 0;
+margin: 0 0 3em;
 padding: 0;
 }
 
@@ -14,9 +14,30 @@ margin: 0;
 	
 	&.tffaq-question {
 	font-weight: bold;
+	margin: 0;
+	padding: 0;
+	
+		a {
+			text-decoration: none;
+			display: block;
+			background-color: lighten(@green, 30%);
+			margin: 0;
+			padding: 10px;
+			border: 1px solid lighten(@green, 10%);
+			border-style: solid none none;
+			color: darken(@green, 50%);
+			
+			&:hover,
+			&:focus {
+				background-color: lighten(@green, 35%);
+			}
+		}
 	}
 	
 	&.tffaq-answer {
 	font-style: normal;
+	padding: 10px;
+	border-top: 1px solid lighten(@green, 10%);
+	background: #fafafa;
 	}
 }
