--- a/wp-content/themes/atlanticmontessori/css/style.css
+++ b/wp-content/themes/atlanticmontessori/css/style.css
@@ -477,6 +477,14 @@ img {
 .logo img {
   height: auto;
 }
+.alignright {
+  float: right;
+  margin: 0 0 0.5em 1.5em;
+}
+.alignleft {
+  float: left;
+  margin: 0 1.5em 0.5em 0;
+}
 /* Forms */
 form p {
   overflow: hidden;
