--- a/wp-content/themes/atlanticmontessori/less/style.less
+++ b/wp-content/themes/atlanticmontessori/less/style.less
@@ -128,6 +128,16 @@ overflow: visible;
 	}
 }
 
+.alignright {
+	float: right;
+	margin: 0 0 0.5em 1.5em;
+}
+
+.alignleft {
+	float: left;
+	margin: 0 1.5em 0.5em 0;
+}
+
 /* Forms */
 
 form {
