--- a/wp-content/themes/atlanticmontessori/less/grid.less
+++ b/wp-content/themes/atlanticmontessori/less/grid.less
@@ -77,7 +77,7 @@ width: (@colWidth * 6) + @colGap * 5;
 
 @media (max-width: 35em) {
 
-	.onecol, .twocol, .threecol, .fourcol, .fivecol {
+	.onecol, .twocol, .threecol, .fourcol, .fivecol, .sixcol {
 	float: none;
 	width: auto;
 	margin: 0;
