--- a/wp-content/themes/atlanticmontessori/less/respond.less
+++ b/wp-content/themes/atlanticmontessori/less/respond.less
@@ -60,11 +60,24 @@ padding-bottom: 7em;
 }
 
 .hero {
+	float: none;
+	margin: 0 auto;
+	height: 280px;
+	
+	img {
+		margin: 0;
+		width: 100%;
+	}
+	
+	.content {
+		position: static;
+		width: auto;
+		padding-top: 2em;
+	}
 	
 	.cta-button {
-	bottom: -5em;
 	margin-left: 0;
-	left: 0;
+	left: 1em;
 	}
 }
 
@@ -96,7 +109,7 @@ margin-top: 3.25em;
 	}
 	
 	.cta-button {
-	margin-left: 10px;
+	margin-left: 0;
 	}
 }
 
@@ -115,7 +128,7 @@ header {
 
 	.content {
 	width: 100%;
-	padding: 0;
+	padding: 1.5em 0 0 0;
 	position: static;
 
 		blockquote {
@@ -125,10 +138,6 @@ header {
 		}
 	}
 	
-	.cta-button {
-	margin-left: 0;
-	bottom: -3em;
-	}
 }
 
 p {
