--- a/wp-content/themes/atlanticmontessori/less/grid.less
+++ b/wp-content/themes/atlanticmontessori/less/grid.less
@@ -62,6 +62,16 @@ float: left;
 width: (@colWidth * 6) + @colGap * 5;
 }
 
+.sevencol {
+float: left;
+width: (@colWidth * 7) + @colGap * 6;
+}
+
+.eightcol {
+float: left;
+width: (@colWidth * 8) + @colGap * 7;
+}
+
 @media (max-width: 71em) {
 
 	.row {
