--- a/wp-content/themes/atlanticmontessori/less/style.less
+++ b/wp-content/themes/atlanticmontessori/less/style.less
@@ -235,6 +235,7 @@ border-bottom: 1.5em solid @greenAccent;
 	
 		&.nav {
 		margin-bottom: 1em;
+		left: -65px;
 		}
 	}
 }
@@ -295,21 +296,18 @@ padding-bottom: 0;
 
 .hero {
 position: relative;
-height: 320px;
 margin-top: 1.5em;
 
 	img {
 	position: relative;
 	display: block;
-	margin-left: 9.5%;
-	width: 90.5%;
+	width: 100%;
 	border-bottom: 4px solid @greenAccent;
 	}
 	
 	.cta-button {
 	position: absolute;
 	.button (#148c4f, #fff);
-	margin-left: 9.5%;
 	left: 1em;
 	margin-top: -1.125em;
 	font-size: 1.25em;
@@ -318,19 +316,19 @@ margin-top: 1.5em;
 	.content {
 	position: absolute;
 	display: block;
-	width: 25em;
+	width: 30em;
 	bottom: -3.25em;
 	right: -2em;
 	margin: 0 0 0.75em;
-	padding: 1em 2em;
-	background: rgba(0,39,159,0.5);
+	padding: 1em 3em;
+	background: rgba(0,39,159,0.6);
 	color: #fff;
-	text-shadow: 0 1px 2px rgba(0,0,0,0.25);
+	text-shadow: 0 1px 3px rgba(0,0,0,0.5);
 	
 		blockquote {
 		padding: 0;
-		font-size: 1.25em;
-		line-height: 1.2em;
+		font-size: 1.5em;
+		line-height: 1.25em;
 		
 		
 			p {
@@ -338,7 +336,7 @@ margin-top: 1.5em;
 			}
 		
 			p.author {
-			padding: 1em 0 0;
+			padding: 1.5em 0 0;
 			text-indent: inherit;
 			}
 		}
