--- a/wp-content/themes/atlanticmontessori/css/style.css
+++ b/wp-content/themes/atlanticmontessori/css/style.css
@@ -461,6 +461,10 @@ p.intro {
   padding: 0;
   margin-bottom: 1em;
 }
+p.intro strong {
+  font-family: "PTSerifBold";
+  font-weight: normal;
+}
 p.intro a {
   font-style: italic;
 }
@@ -480,16 +484,42 @@ blockquote {
   margin: 0;
   padding: 0em 0 1.2em 0;
 }
+blockquote strong {
+  font-family: "PTSerifBold";
+  font-weight: normal;
+}
 blockquote p {
   padding: 0;
 }
 strong {
-  font-family: "PTSerifBold";
+  font-family: "PTSansBold";
   font-weight: normal;
+}
+hr {
+  height: 0;
+  border: none;
+  border-top: 1px solid #c6e5d6;
+  padding: 0 0 0.75em 0;
+  margin: 0.75em 0 0;
 }
 img {
   max-width: 100%;
   height: auto;
+}
+table {
+  margin: 0 0 1.5em;
+}
+table thead {
+  text-align: left;
+}
+table tbody {
+  border-top: 1px solid #19ae62;
+}
+table th {
+  font-family: "PTSansBold";
+}
+table th strong {
+  font-family: "PTSansRegular";
 }
 .logo {
   display: block;
@@ -513,6 +543,14 @@ img {
 }
 article img {
   border-bottom: 4px solid #19ae62;
+}
+.map {
+  float: right;
+  width: 100%;
+}
+.map iframe {
+  width: 100%;
+  height: 320px;
 }
 /* Forms */
 form p {
