--- a/wp-content/themes/atlanticmontessori/less/style.less
+++ b/wp-content/themes/atlanticmontessori/less/style.less
@@ -106,6 +106,11 @@ margin: 0 0 1.5em;
 	line-height: 1.5em;
 	padding: 0;
 	margin-bottom: 1em;
+
+		strong {
+			font-family: "PTSerifBold";
+			font-weight: normal;
+		}
 	
 		a {
 		font-style: italic;
@@ -130,19 +135,52 @@ line-height: 1.25em;
 margin: 0;
 padding: 0em 0 1.2em 0;
 
+	strong {
+		font-family: "PTSerifBold";
+		font-weight: normal;
+	}
+
 	p {
 	padding: 0;
 	}
 }
 
 strong {
-	font-family: "PTSerifBold";
+	font-family: "PTSansBold";
 	font-weight: normal;
+}
+
+hr {
+	height: 0;
+	border: none;
+	border-top: 1px solid darken(#e9f5ef, 10%);
+	padding: 0 0 0.75em 0;
+	margin: 0.75em 0 0;
 }
 
 img {
 max-width: 100%;
 height: auto;
+}
+
+table {
+	margin: 0 0 1.5em;
+
+	thead {
+		text-align: left;		
+	}
+
+	tbody {
+		border-top: 1px solid @greenAccent;	
+	}
+	
+	th {
+		font-family: "PTSansBold";
+		
+		strong {
+			font-family: "PTSansRegular";
+		}
+	}
 }
 
 .logo {
@@ -172,6 +210,16 @@ width: 100%;
 
 article img {
 	border-bottom: 4px solid @greenAccent;
+}
+
+.map {
+	float: right;
+	width: 100%;
+	
+	iframe {
+		width: 100%;
+		height: 320px;
+	}
 }
 
 /* Forms */
