--- a/wp-content/themes/atlanticmontessori/less/grid.less
+++ b/wp-content/themes/atlanticmontessori/less/grid.less
@@ -87,7 +87,7 @@ width: (@colWidth * 8) + @colGap * 7;
 
 @media (max-width: 35em) {
 
-	.onecol, .twocol, .threecol, .fourcol, .fivecol, .sixcol {
+	.onecol, .twocol, .threecol, .fourcol, .fivecol, .sixcol, .sevencol, .eightcol {
 	float: none;
 	width: auto;
 	margin: 0;
