--- a/wp-content/themes/atlanticmontessori/less/respond.less
+++ b/wp-content/themes/atlanticmontessori/less/respond.less
@@ -35,7 +35,7 @@
 	
 }
 
-@media (max-width: 830px) {
+@media (max-width: 54em) {
 
 body {
 	font-size: 87.5%;
@@ -153,6 +153,14 @@ margin-top: 3.25em;
 	}
 }
 
+.page {
+	article {
+		&.fivecol {
+			min-height: 1px;
+		}
+	}
+}
+
 }
 
 @media only screen and (max-width: 35em) {
@@ -184,6 +192,11 @@ p {
 	&.intro {
 		margin-bottom: 0.75em;
 	}
+}
+
+.alignleft,
+.alignright {
+	max-width: 48%;
 }
 
 }
