--- a/wp-content/themes/atlanticmontessori/less/style.less
+++ b/wp-content/themes/atlanticmontessori/less/style.less
@@ -51,7 +51,7 @@ color: @greenAccent;
 h1 {
 font-size: 3em;
 line-height: 1em;
-margin: 0.5em 0 0.25em;
+margin: 0 0 0.25em;
 }
 
 h2 {
@@ -78,7 +78,7 @@ margin: 0.25em 0 0.25em;
 h3 {
 font-size: 1.5em;
 line-height: 1em;
-padding: 0.5em 0;
+margin: 0.25em 0 0.5em;
 }
 
 h4 {
@@ -153,7 +153,7 @@ strong {
 hr {
 	height: 0;
 	border: none;
-	border-top: 1px solid darken(#e9f5ef, 10%);
+	border-top: 1px solid fadeout(@greenAccent, 80%);
 	padding: 0 0 0.75em 0;
 	margin: 0.75em 0 0;
 }
@@ -171,7 +171,7 @@ table {
 	}
 
 	tbody {
-		border-top: 1px solid @greenAccent;	
+		border-top: 1px solid fadeout(@greenAccent, 80%);	
 	}
 	
 	th {
@@ -215,10 +215,27 @@ article img {
 .map {
 	float: right;
 	width: 100%;
+	border: 1px solid fadeout(@greenAccent, 60%);
+	margin-bottom: 0.75em;
 	
 	iframe {
 		width: 100%;
 		height: 320px;
+		display: block;
+	}
+}
+
+.alert {
+	padding: 0.75em 1em;
+	background: fadeout(@greenAccent, 40%);
+	color: white;
+	border-bottom: 4px solid @greenAccent;
+	
+	p {
+		padding: 0;
+		margin: 0;
+		font-family: "PTSerifItalic";
+		font-size: 1.25em;
 	}
 }
 
@@ -312,7 +329,7 @@ border-bottom: 1.5em solid @greenAccent;
 	position: relative;
 	
 		&.nav {
-		margin-bottom: 1em;
+		margin-bottom: 2em;
 		left: -65px;
 		}
 	}
@@ -374,7 +391,6 @@ padding-bottom: 0;
 
 .hero {
 position: relative;
-margin-top: 1.5em;
 
 	img {
 	position: relative;
@@ -394,7 +410,7 @@ margin-top: 1.5em;
 	.content {
 	position: absolute;
 	display: block;
-	width: 30em;
+	width: 35em;
 	bottom: -3.25em;
 	right: -2em;
 	margin: 0 0 0.75em;
@@ -418,6 +434,14 @@ margin-top: 1.5em;
 			padding: 1.5em 0 0;
 			text-indent: inherit;
 			}
+		}
+	}
+}
+
+.page {
+	article {
+		&.fivecol {
+		min-height: 21em;
 		}
 	}
 }
