--- a/wp-content/themes/atlanticmontessori/less/variables.less
+++ b/wp-content/themes/atlanticmontessori/less/variables.less
@@ -17,6 +17,16 @@ transition: @prop @dur @ease;
 box-shadow: @x @y @blur rgba(0,0,0,0.5);
 }
 
+.gradient (@start, @stop) {
+background-color: @start;
+background-image: -moz-linear-gradient(top,  fadeout(@start, 100%), fadeout(@stop, 50%) 100%); /* FF3.6+ */
+background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,fadeout(@start, 100%)), color-stop(100%, fadeout(@stop, 50%))); /* Chrome,Safari4+ */
+background-image: -webkit-linear-gradient(top,  fadeout(@start, 100%) 0%, fadeout(@stop, 50%) 100%); /* Chrome10+,Safari5.1+ */
+background-image: -o-linear-gradient(top,  fadeout(@start, 100%) 0%, fadeout(@stop, 50%) 100%); /* Opera 11.10+ */
+background-image: -ms-linear-gradient(top,  fadeout(@start, 100%) 0%, fadeout(@stop, 50%) 100%); /* IE10+ */
+background-image: linear-gradient(top, fadeout(@start, 100%) 0%, fadeout(@stop, 50%) 100%); /* W3C */
+}
+
 .button (@bg, @text) {
 display: inline-block;
 padding: 0.25em 0.5em;
