--- a/wp-content/themes/atlanticmontessori/css/style.css
+++ b/wp-content/themes/atlanticmontessori/css/style.css
@@ -62,6 +62,8 @@ html {
   /* 1 */
 
   -webkit-text-size-adjust: 100%;
+  /* 2 */
+
   -ms-text-size-adjust: 100%;
   /* 2 */
 
@@ -269,6 +271,8 @@ textarea {
   /* 2 */
 
   vertical-align: baseline;
+  /* 3 */
+
   *vertical-align: middle;
   /* 3 */
 
@@ -324,6 +328,8 @@ input[type="radio"] {
   /* 2 */
 
   *height: 13px;
+  /* 3 */
+
   *width: 13px;
   /* 3 */
 
@@ -501,6 +507,7 @@ strong {
 hr {
   height: 0;
   border: none;
+  border-top: 1px solid #d1efe0;
   border-top: 1px solid rgba(25, 174, 98, 0.19999999999999996);
   padding: 0 0 0.75em 0;
   margin: 0.75em 0 0;
@@ -511,15 +518,27 @@ img {
 }
 table {
   margin: 0 0 1.5em;
+  *zoom: 1;
+  *zoom: 1;
+}
+table:before,
+table:after {
+  display: table;
+  content: "";
+}
+table:after {
+  clear: both;
 }
 table thead {
   text-align: left;
 }
 table tbody {
+  border-top: 1px solid #d1efe0;
   border-top: 1px solid rgba(25, 174, 98, 0.19999999999999996);
 }
 table th {
   font-family: "PTSansBold";
+  text-align: left;
 }
 table th strong {
   font-family: "PTSansRegular";
@@ -550,6 +569,7 @@ article img {
 .map {
   float: right;
   width: 100%;
+  border: 1px solid #a3dfc0;
   border: 1px solid rgba(25, 174, 98, 0.4);
   margin-bottom: 0.75em;
 }
@@ -560,6 +580,7 @@ article img {
 }
 .alert {
   padding: 0.75em 1em;
+  background: url(../img/greenAccent60.png);
   background: rgba(25, 174, 98, 0.6);
   color: white;
   border-bottom: 4px solid #19ae62;
@@ -614,6 +635,7 @@ input[type="submit"] {
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.45);
   color: #000e39;
   background-color: #00279f;
+  border: 1px solid #002390;
   background-image: -moz-linear-gradient(top, rgba(255, 255, 255, 0.4) 0%, rgba(255, 255, 255, 0) 100%);
   background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(255, 255, 255, 0.4)), color-stop(100%, rgba(255, 255, 255, 0)));
   background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.4) 0%, rgba(255, 255, 255, 0) 100%);
@@ -720,6 +742,9 @@ header .row.nav {
   color: #19ae62;
   border-bottom: 4px solid #19ae62;
 }
+.lt-ie8 .main-nav ul {
+  bottom: -6px;
+}
 /* Homepage */
 .hero {
   position: relative;
@@ -774,6 +799,7 @@ header .row.nav {
   right: -2em;
   margin: 0 0 0.75em;
   padding: 1em 3em;
+  background: url(../img/blue60.png);
   background: rgba(0, 39, 159, 0.6);
   color: #fff;
   text-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
@@ -794,6 +820,9 @@ header .row.nav {
 .page article.fivecol {
   min-height: 21em;
 }
+.lt-ie8 article h2 {
+  clear: both;
+}
 /* Footer */
 footer {
   background: transparent url(../img/wood-tile.jpg) repeat;
@@ -802,6 +831,7 @@ footer {
 footer .footer-border {
   display: block;
   height: 1.5em;
+  background: url(../img/blue80.png);
   background: rgba(0, 10, 134, 0.8);
 }
 footer p,
@@ -956,6 +986,7 @@ footer ul {
 .row {
   max-width: 1000px;
   margin: 0 auto;
+  *zoom: 1;
   *zoom: 1;
 }
 .row:before,
