--- a/wp-content/themes/atlanticmontessori/less/style.less
+++ b/wp-content/themes/atlanticmontessori/less/style.less
@@ -159,6 +159,7 @@ strong {
 hr {
 	height: 0;
 	border: none;
+	border-top: 1px solid #d1efe0;	
 	border-top: 1px solid fadeout(@greenAccent, 80%);
 	padding: 0 0 0.75em 0;
 	margin: 0.75em 0 0;
@@ -171,17 +172,20 @@ height: auto;
 
 table {
 	margin: 0 0 1.5em;
+	.clearfix;
 
 	thead {
 		text-align: left;		
 	}
 
 	tbody {
+		border-top: 1px solid #d1efe0;	
 		border-top: 1px solid fadeout(@greenAccent, 80%);	
 	}
 	
 	th {
 		font-family: "PTSansBold";
+		text-align: left;		
 		
 		strong {
 			font-family: "PTSansRegular";
@@ -221,6 +225,7 @@ article img {
 .map {
 	float: right;
 	width: 100%;
+	border: 1px solid #a3dfc0;
 	border: 1px solid fadeout(@greenAccent, 60%);
 	margin-bottom: 0.75em;
 	
@@ -233,6 +238,7 @@ article img {
 
 .alert {
 	padding: 0.75em 1em;
+	background: url(../img/greenAccent60.png);
 	background: fadeout(@greenAccent, 40%);
 	color: white;
 	border-bottom: 4px solid @greenAccent;
@@ -393,6 +399,12 @@ padding-bottom: 0;
 	}
 }
 
+.lt-ie8 {
+	.main-nav ul {
+		bottom: -6px;
+	}
+}
+
 /* Homepage */
 
 .hero {
@@ -421,6 +433,7 @@ position: relative;
 	right: -2em;
 	margin: 0 0 0.75em;
 	padding: 1em 3em;
+	background: url(../img/blue60.png);
 	background: rgba(0,39,159,0.6);
 	color: #fff;
 	text-shadow: 0 1px 3px rgba(0,0,0,0.5);
@@ -452,6 +465,14 @@ position: relative;
 	}
 }
 
+.lt-ie8 {
+	article {
+		h2 {
+			clear: both;
+		}
+	}
+}
+
 /* Footer */
 
 footer {
@@ -461,6 +482,7 @@ border-top: 1px solid #e9e0d1;
 	.footer-border {
 	display: block;
 	height: 1.5em;
+	background: url(../img/blue80.png);
 	background: rgba(0,10,134, 0.8);
 	}
 
