--- a/wp-content/themes/atlanticmontessori/less/style.less
+++ b/wp-content/themes/atlanticmontessori/less/style.less
@@ -398,7 +398,9 @@ padding-bottom: 0;
 			}
 		}
 		
-		&.current_page_item {
+		&.current_page_item,
+		&.current_page_parent,
+		&.current_page_ancestor {
 			
 			a {
 			padding-bottom: 4px;
