--- a/wp-content/themes/atlanticmontessori/less/style.less
+++ b/wp-content/themes/atlanticmontessori/less/style.less
@@ -224,9 +224,21 @@ width: 100%;
 	margin-top: 1.5em;
 }
 
+.wp-caption {
+	img {
+		display: block;
+	}
+}
+
 .wp-caption-text {
 	font-size: 0.75em;
 	color: #666;
+}
+
+pre {
+	font-family: 'OpenSansRegular', Helvetica, Arial, sans-serif;
+	font-size: 0.75em;
+	color: #666;	
 }
 
 article img {
