--- a/wp-content/themes/atlanticmontessori/css/style.css
+++ b/wp-content/themes/atlanticmontessori/css/style.css
@@ -557,7 +557,15 @@ table th strong {
 .alignnone {
   margin-top: 1.5em;
 }
+.wp-caption img {
+  display: block;
+}
 .wp-caption-text {
+  font-size: 0.75em;
+  color: #666;
+}
+pre {
+  font-family: 'OpenSansRegular', Helvetica, Arial, sans-serif;
   font-size: 0.75em;
   color: #666;
 }
