--- a/wp-content/themes/atlanticmontessori/less/style.less
+++ b/wp-content/themes/atlanticmontessori/less/style.less
@@ -146,7 +146,7 @@ font-family: "PTSerifRegular", Goergia, Times New Roman, serif;
 font-size: 1.5em;
 line-height: 1.25em;
 margin: 0;
-padding: 0em 0 1.2em 0;
+padding: 0em;
 
 	strong {
 		font-family: "PTSerifBold";
