--- a/wp-content/themes/atlanticmontessori/css/style.css
+++ b/wp-content/themes/atlanticmontessori/css/style.css
@@ -62,6 +62,8 @@ html {
   /* 1 */
 
   -webkit-text-size-adjust: 100%;
+  /* 2 */
+
   -ms-text-size-adjust: 100%;
   /* 2 */
 
@@ -269,6 +271,8 @@ textarea {
   /* 2 */
 
   vertical-align: baseline;
+  /* 3 */
+
   *vertical-align: middle;
   /* 3 */
 
@@ -324,6 +328,8 @@ input[type="radio"] {
   /* 2 */
 
   *height: 13px;
+  /* 3 */
+
   *width: 13px;
   /* 3 */
 
@@ -489,7 +495,7 @@ blockquote {
   font-size: 1.5em;
   line-height: 1.25em;
   margin: 0;
-  padding: 0em 0 1.2em 0;
+  padding: 0em;
 }
 blockquote strong {
   font-family: "PTSerifBold";
@@ -638,6 +644,7 @@ input[type="submit"] {
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.45);
   color: #000e39;
   background-color: #00279f;
+  border: 1px solid #002390;
   background-image: -moz-linear-gradient(top, rgba(255, 255, 255, 0.4) 0%, rgba(255, 255, 255, 0) 100%);
   background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(255, 255, 255, 0.4)), color-stop(100%, rgba(255, 255, 255, 0)));
   background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.4) 0%, rgba(255, 255, 255, 0) 100%);
@@ -993,6 +1000,7 @@ footer ul {
 .row {
   max-width: 1000px;
   margin: 0 auto;
+  *zoom: 1;
   *zoom: 1;
 }
 .row:before,
